# fx-wallet-packages

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release-aleo.yml  rust.yml
example/: transaction_example.dart
example/ios/Runner.xcodeproj/: project.pbxproj
examples/bc_ur_dart_demo/: .gitignore  AGENTS.md  README.md  pubspec.yaml
examples/bc_ur_dart_demo/android/: build.gradle
examples/bc_ur_dart_demo/android/app/: build.gradle
examples/bc_ur_dart_demo/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
examples/bc_ur_dart_demo/ios/Runner/: Info.plist
examples/bc_ur_dart_demo/lib/: home_page.dart  main.dart
examples/bc_ur_dart_demo/lib/common/: app_theme.dart  copy_helper.dart  eth_tx_fields.dart  mock_data.dart  scan_overlay.dart  session_store.dart
examples/bc_ur_dart_demo/lib/encode/: AGENTS.md  form_page.dart  qr_display_page.dart  type_config.dart  type_selector_page.dart  ur_encoder.dart
examples/bc_ur_dart_demo/lib/scan/: AGENTS.md  result_page.dart  scan_page.dart  ur_parser.dart
examples/bc_ur_dart_demo/lib/sign_flow/: AGENTS.md  sign_flow_entry_page.dart  sign_result_page.dart  sign_step1_page.dart  sign_step2_page.dart
examples/bc_ur_dart_demo/test/: form_page_test.dart  ur_type_smoke_test.dart
examples/k_chart_demo/: pubspec.yaml  pubspec_overrides.yaml
examples/k_chart_demo/lib/: main.dart
examples/web3_webview_demo/: README.md  pubspec.yaml  pubspec_overrides.yaml
examples/web3_webview_demo/lib/: app.dart  main.dart
examples/web3_webview_demo/lib/data/: chains.dart  dapps.dart  url_utils.dart
examples/web3_webview_demo/lib/pages/: browser_page.dart  home_page.dart  log_page.dart  settings_page.dart
examples/web3_webview_demo/lib/services/: base58.dart  bridge_log.dart  eip712.dart  eth_signer.dart  recent_visits.dart  request_summary.dart  sol_signer.dart  wallet_state.dart
examples/web3_webview_demo/lib/widgets/: approval_sheet.dart  dapp_bookmark_grid.dart  debug_panel.dart
examples/web3_webview_demo/test/: approval_sheet_test.dart  eth_signing_test.dart  home_page_test.dart  home_polish_test.dart  home_search_test.dart  settings_pickers_test.dart  settings_test.dart  signing_flow_test.dart  sol_signing_test.dart  widget_test.dart
lib/: bc_ur_dart.dart  chart_style.dart  forked_lib.dart  k_chart_flutter.dart  k_chart_widget.dart  transaction.dart  utils.dart
lib/entity/: candle_entity.dart
lib/extension/: map_ext.dart
lib/renderer/: base_chart_painter.dart  chart_painter.dart  main_renderer.dart  secondary_renderer.dart  vol_renderer.dart
lib/src/config/: config.dart
lib/src/config/chain/: chain_configs.dart
lib/src/config/chain/bech32/: hns.dart
lib/src/config/chain/btc/: doge.dart
lib/src/config/chain/regular/: icp.dart  sc.dart  sui.dart  trx.dart
lib/src/config/chain/ton/: ton.dart
lib/src/config/chain/type/: default.dart
lib/src/config/constants/: constants.dart  icp_constants.dart
lib/src/forked_lib/bitcoin_base_hd/: bitcoin_base.dart
lib/src/forked_lib/bitcoin_flutter/src/: crypto.dart  ecpair.dart  transaction.dart  transaction_builder.dart
lib/src/forked_lib/cosmos_dart/: cosmos_dart.dart
lib/src/forked_lib/cosmos_dart/codec/: codec.dart
lib/src/forked_lib/cosmos_dart/transactions/: export.dart
lib/src/forked_lib/psbt/: psbt.dart
lib/src/forked_lib/xrpl_dart/: xrpl_dart.dart
lib/src/models/btc/: gspl_sign_request.dart  psbt_signature.dart
lib/src/models/eth/: eth_sign_request.dart  eth_signature.dart
lib/src/models/key/: crypto_multi_accounts.dart
lib/src/transaction/alph/: tx_data.dart
lib/src/transaction/aptos/: tx_data.dart
lib/src/transaction/btc/: psbt_tx_data.dart  psbt_tx_signer.dart
lib/src/transaction/ckb/lib/: serialize.dart
lib/src/transaction/eth/: eip1559.dart  eip7702.dart  legacy.dart
lib/src/transaction/filecoin/: fil_lib.dart  tx_data.dart  tx_signer.dart
lib/src/transaction/hns/: hns_lib.dart  sign.dart
lib/src/transaction/icp/: tx_data.dart  tx_signer.dart
lib/src/transaction/kas/: kas_lib.dart
lib/src/transaction/near/: near_lib.dart  tx_data.dart  tx_signer.dart
lib/src/transaction/sui/: tx_data.dart  tx_signer.dart
lib/src/transaction/xrp/: xrp_lib.dart
lib/src/type/: tx_data_type.dart
lib/src/utils/: bech32.dart  ed25519.dart  error.dart  number.dart  sr25519.dart  type.dart  utils.dart
lib/src/wallets/: aptos.dart  btc.dart  dot.dart  hns.dart  icp.dart  kas.dart  sol.dart  sui.dart  trx.dart
rust/: .gitignore  build_android.sh  build_ios.sh  rust-toolchain.toml
rust/aleo_ffi/: Cargo.toml  about.hbs  about.toml
rust/aleo_ffi/docs/: cross-compile.md  network-io-to-dart.md  phase4-plan.md  pr2a-preflight-spec.md  pr2b-orchestration-spec.md  pr4a-abi-spec.md  pr6-distribution-spec.md  pr6a-impl-notes.md
rust/aleo_ffi/src/: lib.rs
rust/aleo_rust/: Cargo.toml  README.md
rust/aleo_rust/aleo-rust/rust/: Cargo.toml
rust/aleo_rust/aleo-rust/rust/src/: lib.rs
rust/aleo_rust/aleo-rust/rust/src/api/: mod.rs
rust/aleo_rust/rust/: Cargo.toml
rust/aleo_rust/src/: lib.rs
rust/aleo_rust/src/account/: encryptor.rs
rust/aleo_rust/src/api/: blocking.rs  mod.rs
rust/aleo_rust/src/program/: deploy.rs  execute.rs  ffi.rs  join.rs  mod.rs  network.rs  resolver.rs  transfer.rs
rust/aleo_rust/src/program/helpers/: offline.rs
rust/aleo_rust/src/test_utils/: mod.rs
rust/aleo_rust/wasm/src/: lib.rs
rust/aleo_rust/wasm/src/programs/: macros.rs
rust/aleo_rust/wasm/src/programs/manager/: deploy.rs  execute.rs  join.rs  mod.rs  split.rs  transfer.rs
test/: dot_test.dart  eip7702_test.dart  mnemonic.dart  near_test.dart  ur_test.dart  utils_test.dart
test/address/data/: address.json
test/psbt/: data.json
test/transaction/: algo_test.dart  sol_v2_test.dart
test/transaction/data/: algo.json  alph.json  aptos.json  ckb.json  kas.json  xrp.json
test/utils/: byte_words_test.dart  xfp_test.dart
(+136 files in other folders)
