[package]
name = "aleo_ffi"
version = "0.1.0"
authors = ["fx wallet <www.fxwallet.com>"]
description = "Apache-2.0 clean-room FFI bindings for Aleo, built directly on snarkVM (no GPL Aleo SDK)."
license = "Apache-2.0"
edition = "2021"

[lib]
name = "aleo_rust"
# rlib in addition to cdylib so `cargo test` can build a unit-test harness.
crate-type = ["cdylib", "rlib"]

[dependencies]
snarkvm-console = "=4.5.0"
snarkvm-ledger-block = "=4.5.0"
snarkvm-ledger-store = "=4.5.0"
snarkvm-ledger-query = "=4.5.0"
snarkvm-synthesizer = "=4.5.0"
aleo-std-storage = "=1.0.3"
anyhow = "1"
rand = "0.8.5"
serde = "1"
serde_json = "1"

[dev-dependencies]
# Enables snarkVM's `state_path::test_helpers::sample_global_state_path`, so the
# private-flow StaticQuery path can be unit-tested offline with real StatePaths
# (no chain/node). This uses snarkvm-console-program's `test` feature — which is
# empty (`test = []`) and, crucially, does NOT pull in `snarkvm-console-network`'s
# `test` feature, so the consensus-version *heights* stay at their production
# values (network/test swaps them for test heights, which would break
# consensus_version_for and silently change proving's version selection).
# Test-only: dev-dependencies are excluded from the release cdylib.
snarkvm-console-program = { version = "=4.5.0", features = ["test"] }

# Expose VM::execute_authorization_raw / execute_fee_authorization_raw (private
# upstream) for the split-proof flow. Apache-2.0; verbatim + a 2-line pub patch.
[patch.crates-io]
snarkvm-synthesizer = { path = "../vendor/snarkvm-synthesizer-4.5.0" }
