[package]
name = "aleo_rust"
version = "0.6.6"
authors = [ "fx wallet <www.fxwallet.com>" ]
description = "Dart for managing Aleo programs and communicating with the Aleo network"
homepage = "www.fxwallet.com"
readme = "README.md"
repository = "https://github.com/fxwalletOfficial/aleo_dart"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]


[dependencies.anyhow]
version = "1"


[dependencies.indexmap]
version = "2.0"

[dependencies.once_cell]
version = "1.18.0"

[dependencies.rand]
version = "0.8.5"

[dependencies.ureq]
features = [ "json" ]
optional = true
version = "2.7.1"


[dependencies.snarkvm]
optional = true

[dependencies.snarkvm-circuit-network]

[dependencies.snarkvm-console]

[dependencies.snarkvm-ledger-store]

[dependencies.snarkvm-ledger-query]

[dependencies.snarkvm-ledger-block]

[dependencies.snarkvm-synthesizer]


[features]
default = [ "full" ]
full = [ "ureq", "snarkvm" ]
serial = [ "snarkvm-console/serial", "snarkvm-synthesizer/serial", "snarkvm-ledger-query/serial", "snarkvm-ledger-block/serial", "snarkvm-ledger-store/serial" ]
