[package]
name = "aleo_rust"
version = "0.6.6"
authors = [ "fx wallet <www.fxwallet.com>" ]
description = "Dart for managing Aleo programs and communicating with the Aleo network"
homepage = "www.fxwallet.com"
readme = "README.md"
repository = "https://github.com/fxwalletOfficial/aleo_dart"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies.anyhow]
version = "1"


[dependencies.indexmap]
version = "2.0"

[dependencies.once_cell]
version = "1.18.0"

[dependencies.rand]
version = "0.8.5"

[dependencies.ureq]
features = [ "json" ]
optional = true
version = "2.7.1"


[dependencies.snarkvm]
version = "0.16.18"
optional = true

[dependencies.snarkvm-circuit-network]
version = "0.16.18"

[dependencies.snarkvm-console]
version = "0.16.18"

[dependencies.snarkvm-ledger-store]
version = "0.16.18"

[dependencies.snarkvm-ledger-query]
version = "0.16.18"

[dependencies.snarkvm-ledger-block]
version = "0.16.18"

[dependencies.snarkvm-synthesizer]
version = "0.16.18"

[features]
default = [ "full" ]
full = [ "ureq", "snarkvm" ]
serial = [ "snarkvm-console/serial", "snarkvm-synthesizer/serial", "snarkvm-ledger-query/serial", "snarkvm-ledger-block/serial", "snarkvm-ledger-store/serial" ]
